app/ponger/manifests/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ponger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ponger
    spec:
      containers:
      - name: ponger
        image: library/ponger:latest
        imagePullPolicy: Never # required for k3d imported images
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tls-volume
          mountPath: "/etc/tls"
          readOnly: true
      volumes:
      - name: tls-volume
        secret:
          secretName: ponger-tls

---

apiVersion: v1
kind: Service
metadata:
  name: pong
spec:
  selector:
    app.kubernetes.io/name: ponger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-allpods-to-dns
  namespace: default
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-ponger
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ponger
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: pinger  
    ports:
    - protocol: TCP
      port: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-pinger
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pinger
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ponger
      ports:
        - protocol: TCP
          port: 8080
